minor spacing issues remain

--- a/public/additional-filebox-styles.css
+++ b/public/additional-filebox-styles.css
@@ -1,7 +1,7 @@
 body{
   background-color: rgb(251, 251, 251);
   color:rgb(68,68,68);
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans';
 }
 
 h1, h2 {
@@ -32,7 +32,7 @@ td{
 }
 
 .navigation{
-  color:blue;
+  color:rgb(68,68,68);
 }
 
 .hero{
@@ -48,7 +48,7 @@ button{
   color: white;
   width: 100%;
   height:40px;
-  transition: all 0.2s ease-in-out;
+  border-radius: 5px;
 }
 
 button:hover {
@@ -112,6 +112,9 @@ button:hover {
   padding-left: 0;
 }
 
+.get-started-now{
+  margin-bottom:150px;
+}
 
 .footer-list-item{
   color: rgb(119,119,119);
